--- a/projects/solo-web-controller/pom.xml
+++ b/projects/solo-web-controller/pom.xml
@@ -15,7 +15,29 @@
     <dependencies>
         <dependency>
             <groupId>jp.gr.java_conf.star_diopside.solo</groupId>
+            <artifactId>solo-support</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>jp.gr.java_conf.star_diopside.solo</groupId>
             <artifactId>solo-service</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
         </dependency>
         <dependency>
             <groupId>jp.gr.java_conf.star_diopside.solo</groupId>
