--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,16 @@
         <hamcrest.version>1.3</hamcrest.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>google-maven-repository</id>
+            <url>https://m2repos.googlecode.com/svn/nexus/</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
     <build>
         <pluginManagement>
             <plugins>
@@ -73,6 +83,11 @@
             <dependency>
                 <groupId>jp.gr.java_conf.star_diopside.solo</groupId>
                 <artifactId>solo-core</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>jp.gr.java_conf.star_diopside.solo</groupId>
+                <artifactId>solo-resources</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
@@ -220,6 +235,11 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>3.1</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.code</groupId>
+                <artifactId>kaptcha</artifactId>
+                <version>2.3.2</version>
             </dependency>
             <dependency>
                 <groupId>junit</groupId>
