--- a/projects/solo-resources/pom.xml
+++ b/projects/solo-resources/pom.xml
@@ -3,8 +3,8 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>solo-support</artifactId>
-    <name>solo-support</name>
+    <artifactId>solo-resources</artifactId>
+    <name>solo-resources</name>
 
     <parent>
         <groupId>jp.gr.java_conf.star_diopside.solo</groupId>
@@ -14,21 +14,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>jp.gr.java_conf.star_diopside.solo</groupId>
-            <artifactId>solo-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>javax.validation</groupId>
-            <artifactId>validation-api</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
         </dependency>
     </dependencies>
 
