--- a/projects/solo-service/pom.xml
+++ b/projects/solo-service/pom.xml
@@ -18,6 +18,14 @@
             <artifactId>solo-data</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+        </dependency>
+        <dependency>
             <groupId>jp.gr.java_conf.star_diopside.solo</groupId>
             <artifactId>solo-test-support</artifactId>
             <scope>test</scope>
