--- a/servlets/solo-web/src/main/resources/ValidationMessages.properties
+++ b/servlets/solo-web/src/main/resources/ValidationMessages.properties
@@ -1,2 +1,8 @@
 jp.gr.java_conf.star_diopside.solo.validation.Required.username.message=\u30e6\u30fc\u30b6\u540d\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+jp.gr.java_conf.star_diopside.solo.validation.Size.username.message=\u30e6\u30fc\u30b6\u540d\u306f6\uff5e50\u6587\u5b57\u306e\u7bc4\u56f2\u3067\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+jp.gr.java_conf.star_diopside.solo.validation.Required.nickname.message=\u30cb\u30c3\u30af\u30cd\u30fc\u30e0\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+jp.gr.java_conf.star_diopside.solo.validation.Size.nickname.message=\u30cb\u30c3\u30af\u30cd\u30fc\u30e0\u306f50\u6587\u5b57\u4ee5\u4e0b\u3067\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 jp.gr.java_conf.star_diopside.solo.validation.Required.password.message=\u30d1\u30b9\u30ef\u30fc\u30c9\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+jp.gr.java_conf.star_diopside.solo.validation.Size.password.message=\u30d1\u30b9\u30ef\u30fc\u30c9\u306f6\u6587\u5b57\u4ee5\u4e0a\u3067\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+jp.gr.java_conf.star_diopside.solo.validation.Required.passwordConfirm.message=\u30d1\u30b9\u30ef\u30fc\u30c9\uff08\u78ba\u8a8d\uff09\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+jp.gr.java_conf.star_diopside.solo.validation.Required.captcha.message=\u753b\u50cf\u8a8d\u8a3c\u6587\u5b57\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
