--- a/servlets/solo-web/src/main/webapp/WEB-INF/web.xml
+++ b/servlets/solo-web/src/main/webapp/WEB-INF/web.xml
@@ -58,9 +58,20 @@
         <load-on-startup>1</load-on-startup>
     </servlet>
 
+    <servlet>
+        <servlet-name>kaptcha</servlet-name>
+        <servlet-class>com.google.code.kaptcha.servlet.KaptchaServlet</servlet-class>
+        <load-on-startup>2</load-on-startup>
+    </servlet>
+
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
         <url-pattern>/</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>kaptcha</servlet-name>
+        <url-pattern>/captcha.jpg</url-pattern>
     </servlet-mapping>
 
     <session-config>
