--- a/projects/solo-data/pom.xml
+++ b/projects/solo-data/pom.xml
@@ -17,6 +17,20 @@
             <groupId>jp.gr.java_conf.star_diopside.solo</groupId>
             <artifactId>solo-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.0-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>jp.gr.java_conf.star_diopside.solo</groupId>
+            <artifactId>solo-test-support</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
