--- a/projects/solo-resources/pom.xml
+++ b/projects/solo-resources/pom.xml
@@ -16,6 +16,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
