データベース定義の修正

--- a/projects/solo-test-support/src/main/resources/test-database.properties
+++ b/projects/solo-test-support/src/main/resources/test-database.properties
@@ -1,4 +1,4 @@
 test-datasource.driver=org.postgresql.Driver
-test-datasource.url=jdbc:postgresql://localhost:5432/application
-test-datasource.username=wbsrvcl
-test-datasource.password=wbsrvcl
+test-datasource.url=jdbc:postgresql://localhost:5432/management
+test-datasource.username=management
+test-datasource.password=management
