無効ユーザチェック処理を追加

--- a/projects/solo-resources/src/main/resources/message.properties
+++ b/projects/solo-resources/src/main/resources/message.properties
@@ -1,4 +1,5 @@
 Error.BadCredential=\u30e6\u30fc\u30b6\u540d\u307e\u305f\u306f\u30d1\u30b9\u30ef\u30fc\u30c9\u304c\u9593\u9055\u3063\u3066\u3044\u307e\u3059\u3002
+Error.UserInvalid=\u5165\u529b\u3055\u308c\u305f\u30e6\u30fc\u30b6\u60c5\u5831\u306f\u6709\u52b9\u671f\u9650\u5207\u308c\u306e\u305f\u3081\u524a\u9664\u3055\u308c\u307e\u3057\u305f\u3002
 Error.Authentication=\u8a8d\u8a3c\u51e6\u7406\u3067\u30a8\u30e9\u30fc\u304c\u767a\u751f\u3057\u307e\u3057\u305f\u3002
 Error.NotMatchPasswordConfirm=\u30d1\u30b9\u30ef\u30fc\u30c9\u304c\u78ba\u8a8d\u7528\u5165\u529b\u5185\u5bb9\u3068\u4e00\u81f4\u3057\u307e\u305b\u3093\u3002
 Error.NotMatchCaptcha=\u753b\u50cf\u306b\u8868\u793a\u3055\u308c\u3066\u3044\u308b\u6587\u5b57\u3068\u4e00\u81f4\u3057\u307e\u305b\u3093\u3002
