--- a/servlets/solo-web/src/main/webapp/WEB-INF/web.xml
+++ b/servlets/solo-web/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,11 @@
     </filter>
 
     <filter>
+        <filter-name>loggingConfig</filter-name>
+        <filter-class>jp.gr.java_conf.star_diopside.solo.web.servlet.LoggingConfigFilter</filter-class>
+    </filter>
+
+    <filter>
         <filter-name>shallowEtagHeader</filter-name>
         <filter-class>org.springframework.web.filter.ShallowEtagHeaderFilter</filter-class>
     </filter>
@@ -32,6 +37,11 @@
 
     <filter-mapping>
         <filter-name>characterEncoding</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>loggingConfig</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
