--- a/projects/pom.xml
+++ b/projects/pom.xml
@@ -14,6 +14,7 @@
     </parent>
 
     <modules>
+        <module>common-web</module>
         <module>solo-core</module>
         <module>solo-resources</module>
         <module>solo-support</module>
