--- a/servlets/solo-web/pom.xml
+++ b/servlets/solo-web/pom.xml
@@ -20,6 +20,11 @@
     <dependencies>
         <dependency>
             <groupId>jp.gr.java_conf.star_diopside.solo</groupId>
+            <artifactId>common-web</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>jp.gr.java_conf.star_diopside.solo</groupId>
             <artifactId>solo-resources</artifactId>
             <scope>runtime</scope>
         </dependency>
