--- a/projects/solo-test-support/src/main/resources/test-database.properties
+++ b/projects/solo-test-support/src/main/resources/test-database.properties
@@ -1,4 +1,4 @@
 test-datasource.driver=org.postgresql.Driver
-test-datasource.url=jdbc:postgresql://localhost:5432/management
-test-datasource.username=management
-test-datasource.password=management
+test-datasource.url=jdbc:postgresql://localhost:5432/test-solo
+test-datasource.username=solo
+test-datasource.password=solo
