--- a/servlets/solo-web/src/main/webapp/WEB-INF/web.xml
+++ b/servlets/solo-web/src/main/webapp/WEB-INF/web.xml
@@ -106,4 +106,10 @@
         <res-auth>Container</res-auth>
     </resource-ref>
 
+    <resource-ref>
+        <res-ref-name>jdbc/session-store</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
+
 </web-app>
