Servlet 3.1に変更 ビューにTilesを使用する実装を追加

--- a/projects/solo-support/pom.xml
+++ b/projects/solo-support/pom.xml
@@ -18,8 +18,8 @@
             <artifactId>solo-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax.validation</groupId>
-            <artifactId>validation-api</artifactId>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
