--- a/pom.xml
+++ b/pom.xml
@@ -151,7 +151,7 @@
                                 <content><![CDATA[eclipse.preferences.version=1${line.separator}line.separator=\n${line.separator}]]></content>
                             </file>
                         </additionalConfig>
-                        <jeeversion>6.0</jeeversion>
+                        <jeeversion>7.0</jeeversion>
                     </configuration>
                 </plugin>
             </plugins>
@@ -215,19 +215,14 @@
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>javax.servlet</groupId>
-                <artifactId>javax.servlet-api</artifactId>
-                <version>3.0.1</version>
+                <groupId>javax</groupId>
+                <artifactId>javaee-web-api</artifactId>
+                <version>7.0</version>
             </dependency>
             <dependency>
-                <groupId>javax.validation</groupId>
-                <artifactId>validation-api</artifactId>
-                <version>1.1.0.Final</version>
-            </dependency>
-            <dependency>
-                <groupId>org.hibernate</groupId>
-                <artifactId>hibernate-validator</artifactId>
-                <version>5.1.0.Final</version>
+                <groupId>jstl</groupId>
+                <artifactId>jstl</artifactId>
+                <version>1.2</version>
             </dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
@@ -240,9 +235,9 @@
                 <version>1.0.0.Final</version>
             </dependency>
             <dependency>
-                <groupId>jstl</groupId>
-                <artifactId>jstl</artifactId>
-                <version>1.2</version>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-validator</artifactId>
+                <version>5.1.0.Final</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
@@ -352,6 +347,11 @@
             </dependency>
             <dependency>
                 <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-taglibs</artifactId>
+                <version>${spring-security.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-web</artifactId>
                 <version>${spring-security.version}</version>
             </dependency>
@@ -364,6 +364,11 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>3.2.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.tiles</groupId>
+                <artifactId>tiles-jsp</artifactId>
+                <version>3.0.3</version>
             </dependency>
             <dependency>
                 <groupId>commons-dbcp</groupId>
