--- a/projects/solo-web-controller/pom.xml
+++ b/projects/solo-web-controller/pom.xml
@@ -22,13 +22,9 @@
             <artifactId>solo-service</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>javax.validation</groupId>
-            <artifactId>validation-api</artifactId>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
