スケジュール登録処理の実装

--- a/projects/solo-service/pom.xml
+++ b/projects/solo-service/pom.xml
@@ -15,6 +15,10 @@
     <dependencies>
         <dependency>
             <groupId>jp.gr.java_conf.star_diopside.solo</groupId>
+            <artifactId>solo-support</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>jp.gr.java_conf.star_diopside.solo</groupId>
             <artifactId>solo-data</artifactId>
         </dependency>
         <dependency>
