--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,11 @@
                 <enabled>false</enabled>
             </snapshots>
         </repository>
+        <repository>
+            <id>maru</id>
+            <name>Maru Project Maven Repository</name>
+            <url>http://maru.sourceforge.jp/mvn/</url>
+        </repository>
     </repositories>
 
     <build>
@@ -238,6 +243,11 @@
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-validator</artifactId>
                 <version>5.1.0.Final</version>
+            </dependency>
+            <dependency>
+                <groupId>org.maru.m4hv.extensions</groupId>
+                <artifactId>m4hv-extensions</artifactId>
+                <version>1.4.1</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
