--- a/projects/solo-web-controller/pom.xml
+++ b/projects/solo-web-controller/pom.xml
@@ -15,10 +15,6 @@
     <dependencies>
         <dependency>
             <groupId>jp.gr.java_conf.star_diopside.solo</groupId>
-            <artifactId>solo-support</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>jp.gr.java_conf.star_diopside.solo</groupId>
             <artifactId>solo-service</artifactId>
         </dependency>
         <dependency>
@@ -29,6 +25,10 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.maru.m4hv.extensions</groupId>
+            <artifactId>m4hv-extensions</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
