--- a/servlets/solo-web/src/main/resources/ValidationMessages.properties
+++ b/servlets/solo-web/src/main/resources/ValidationMessages.properties
@@ -6,3 +6,5 @@ jp.gr.java_conf.star_diopside.solo.validation.Required.password.message=\u30d1\u
 jp.gr.java_conf.star_diopside.solo.validation.Size.password.message=\u30d1\u30b9\u30ef\u30fc\u30c9\u306f6\u6587\u5b57\u4ee5\u4e0a\u3067\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 jp.gr.java_conf.star_diopside.solo.validation.Required.passwordConfirm.message=\u30d1\u30b9\u30ef\u30fc\u30c9\uff08\u78ba\u8a8d\uff09\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 jp.gr.java_conf.star_diopside.solo.validation.Required.captcha.message=\u753b\u50cf\u8a8d\u8a3c\u6587\u5b57\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+jp.gr.java_conf.star_diopside.solo.validation.Required.scheduledOn.message=\u30b9\u30b1\u30b8\u30e5\u30fc\u30eb\u65e5\u4ed8\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+jp.gr.java_conf.star_diopside.solo.validation.ActualDate.scheduledOn.message=\u30b9\u30b1\u30b8\u30e5\u30fc\u30eb\u65e5\u4ed8\u306b\u306f yyyy-MM-dd \u5f62\u5f0f\u3067\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
