無効ユーザ削除バッチを追加

--- a/projects/pom.xml
+++ b/projects/pom.xml
@@ -21,6 +21,8 @@
         <module>solo-data</module>
         <module>solo-service</module>
         <module>solo-web-controller</module>
+        <module>solo-batch</module>
+        <module>solo-batch-runner</module>
         <module>solo-test-support</module>
     </modules>
 
