--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,11 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <slf4j.version>1.7.6</slf4j.version>
-        <logback.version>1.1.1</logback.version>
-        <spring.version>4.0.2.RELEASE</spring.version>
-        <spring-security.version>3.2.0.RELEASE</spring-security.version>
+        <slf4j.version>1.7.7</slf4j.version>
+        <logback.version>1.1.2</logback.version>
+        <spring.version>4.0.3.RELEASE</spring.version>
+        <spring-security.version>3.2.3.RELEASE</spring-security.version>
+        <spring-batch.version>2.2.6.RELEASE</spring-batch.version>
         <hamcrest.version>1.3</hamcrest.version>
     </properties>
 
@@ -143,6 +144,24 @@
                     <version>2.2.1</version>
                 </plugin>
                 <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>appassembler-maven-plugin</artifactId>
+                    <version>1.8</version>
+                    <executions>
+                        <execution>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>assemble</goal>
+                            </goals>
+                            <configuration>
+                                <copyConfigurationDirectory>true</copyConfigurationDirectory>
+                                <repositoryLayout>flat</repositoryLayout>
+                                <useWildcardClassPath>true</useWildcardClassPath>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-eclipse-plugin</artifactId>
                     <configuration>
@@ -216,6 +235,11 @@
             </dependency>
             <dependency>
                 <groupId>jp.gr.java_conf.star_diopside.solo</groupId>
+                <artifactId>solo-batch</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>jp.gr.java_conf.star_diopside.solo</groupId>
                 <artifactId>solo-test-support</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -232,7 +256,7 @@
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-entitymanager</artifactId>
-                <version>4.3.4.Final</version>
+                <version>4.3.5.Final</version>
             </dependency>
             <dependency>
                 <groupId>org.hibernate.javax.persistence</groupId>
@@ -343,7 +367,7 @@
             <dependency>
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-jpa</artifactId>
-                <version>1.5.0.RELEASE</version>
+                <version>1.5.2.RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.security</groupId>
@@ -366,14 +390,29 @@
                 <version>${spring-security.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.springframework.batch</groupId>
+                <artifactId>spring-batch-core</artifactId>
+                <version>${spring-batch.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.batch</groupId>
+                <artifactId>spring-batch-infrastructure</artifactId>
+                <version>${spring-batch.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.batch</groupId>
+                <artifactId>spring-batch-test</artifactId>
+                <version>${spring-batch.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.aspectj</groupId>
                 <artifactId>aspectjweaver</artifactId>
-                <version>1.7.4</version>
+                <version>1.8.0</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
-                <version>3.2.1</version>
+                <version>3.3.2</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.tiles</groupId>
@@ -398,7 +437,7 @@
             <dependency>
                 <groupId>org.postgresql</groupId>
                 <artifactId>postgresql</artifactId>
-                <version>9.3-1100-jdbc41</version>
+                <version>9.3-1101-jdbc41</version>
             </dependency>
             <dependency>
                 <groupId>junit</groupId>
@@ -418,7 +457,7 @@
             <dependency>
                 <groupId>org.dbunit</groupId>
                 <artifactId>dbunit</artifactId>
-                <version>2.4.9</version>
+                <version>2.5.0</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
