--- a/projects/pom.xml
+++ b/projects/pom.xml
@@ -26,4 +26,8 @@
         <module>solo-test-support</module>
     </modules>
 
+    <properties>
+        <project.rootdir>${project.basedir}/..</project.rootdir>
+    </properties>
+
 </project>
