--- a/projects/solo-core/pom.xml
+++ b/projects/solo-core/pom.xml
@@ -12,6 +12,10 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <properties>
+        <project.rootdir>${project.basedir}/../..</project.rootdir>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.slf4j</groupId>
