--- a/servlets/solo-web/pom.xml
+++ b/servlets/solo-web/pom.xml
@@ -13,6 +13,10 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <properties>
+        <project.rootdir>${project.basedir}/../..</project.rootdir>
+    </properties>
+
     <build>
         <finalName>${project.artifactId}</finalName>
     </build>
