ユーザテーブルにレコードが11件以上存在し、かつ先頭10件に無効ユーザが含まれる場合、無効ユーザの削除漏れが発生する不具合を修正

--- a/projects/solo-test-support/pom.xml
+++ b/projects/solo-test-support/pom.xml
@@ -56,6 +56,10 @@
             <artifactId>spring-test</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+        </dependency>
+        <dependency>
             <groupId>commons-dbcp</groupId>
             <artifactId>commons-dbcp</artifactId>
             <scope>runtime</scope>
